Fixed source alignment, tooltip color

--- a/css/style.css
+++ b/css/style.css
@@ -527,9 +527,10 @@ form {
 #section7-source {
     font-weight: light;
     font-size:12px;
-    padding-top: 60px;
+    padding-top: 335px;
     z-index:10;
-    position: absolute;  
+    position: absolute;
+    right:5px;  
 }
 
 #section6 h1 {
